@@ -194,6 +194,11 @@
 	<li>Grayscale PDF output was not truly grayscale (STR
 	#32)</li>
 
+	<li>Fixed a table-of-contents bug introduced in
+	1.8.24rc1 which caused the PDF document outline and
+	actual TOC pages were not rendered properly (STR
+	#37)</li>
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
